<resources>
    <string name="app_name">Learning Companion</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Main Overview</string>
    <string name="title_activity_get_location">Get Location</string>

    <string name="btn_overview">Overview</string>
    <string name="btn_setGoal">Set Goal</string>
    <string name="btn_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Learning Companion</string>
    <string name="nav_header_subtitle_en">I\'m Charlie. Click me!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_set_goal">Set a new goal</string>

    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="select_time">Select Time</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="goal_with_help_info_title">You choose to set a goal with help...</string>
    <string name="goal_with_help_info_message">So let\'s do this together!</string>
    <string name="goal_with_help_info_message2">Tap anywhere to continue...</string>
    <string name="goal_with_help_action_info2">What action are you going to perform?</string>
    <string name="goal_with_help_action_info1">What are you going to do?</string>
    <string name="goal_with_help_field_info1">What discipline or field of learning are you dealing with?</string>
    <string name="goal_with_help_object_info1">With which medium or materials are you learning?</string>
    <string name="goal_with_help_amount_info1">How much do you want to learn?</string>
    <string name="goal_with_help_duration_info1">How long do you want to learn?</string>
    <string name="goal_decide_path_title">Do you know how to set a goal?</string>
    <string name="goal_no_help_info_message">Your goal should be specific. measurable, attainable, realistic and timebound...</string>
    <string name="goal_no_help_info_title">Great!</string>
    <string name="goal_summury_title">Your Goal is...</string>
    <string name="goal_summury_correct">Correct?</string>

    <string name="goal_current_title">My current goal is ...</string>

    <string name="title_nav_menu_main_screen">Ready to Learn</string>
    <string name="title_nav_menu_place">My Places</string>
    <string name="title_nav_menu_goal">My Goals</string>
    <string name="title_nav_menu_history">My learning History</string>
    <string name="title_nav_menu_alert">Alert</string>
    <string name="title_nav_menu_recommendation">Recommendation</string>
    <string name="title_nav_menu_settings">My learning companion</string>
    <string name="title_nav_menu_help">Help</string>

    <string name="settings_user_name">User Name :</string>
    <string name="settings_buddy_name">Buddy Name :</string>
    <string name="settings_buddy_image">Buddy Image :</string>
    <string name="settings_gps">GPS :</string>
    <string name="settings_microphone">Microphone :</string>
    <string name="settings_camera">Camera :</string>

    <string name="settings_permissions_header">GPS, Camera and Microphone Services</string>
    <string name="settings_permissions_info">*NOTE: You can enable/disable the Settings at the <b>SETTINGS MENU</b></string>

    <string name="settings_intervation_frequency">Intervention Frequency</string>
    <string name="settings_intervation_frequency_notice"> will alert you at least at start and at the end.</string>
    <string name="settings_interval">Interval</string>
    <string name="settings_interval_remark"> will alert you every</string>
    <string name="settings_frequency">Frequency</string>
    <string name="settings_frequency_remark"> will alert you</string>
    <string name="settings_interval_times">times</string>

    <string name="place_use_camera_note">You can set a background picture for this place by using your camera or gallery.</string>
    <string name="place_noise_rating_silent">silent</string>
    <string name="place_noise_rating_quiet">quiet</string>
    <string name="place_noise_rating_loud">loud</string>
    <string name="place_noise_rating_noisy">noisy</string>
    <string name="place_brightness_rating_dark">dark</string>
    <string name="place_brightness_rating_dim">dim</string>
    <string name="place_brightness_rating_bright">bright</string>
    <string name="place_brightness_rating_shiny">shiny</string>
    <string name="exit_prohibited_message">Let us keep concentrating on achieving your goal. You can look around when you are done or have quit.</string>

</resources>
