<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="70dp"
        android:paddingTop="30dp"
        android:paddingRight="70dp"
        android:paddingBottom="70dp"

        >

        <Button
            android:id="@+id/btn_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:backgroundTint="@color/colorMainActivityButtonOverview"
            android:paddingTop="@dimen/btn_main_padding_ver"
            android:paddingBottom="@dimen/btn_main_padding_ver"
            android:text="@string/btn_overview"

            android:layout_marginBottom="60dp"

            />

        <Button
            android:id="@+id/btn_setGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="60dp"
            android:backgroundTint="@color/colorMainActivityButtonNew"
            android:paddingTop="@dimen/btn_main_padding_ver"
            android:paddingBottom="@dimen/btn_main_padding_ver"

            android:text="@string/btn_setGoal"

            />

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:backgroundTint="@color/colorMainActivityButtonSettings"
            android:paddingTop="@dimen/btn_main_padding_ver"
            android:paddingBottom="@dimen/btn_main_padding_ver"
            android:text="@string/btn_settings"

            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>